@@ -26,6 +26,7 @@ Changelog
  * Fix: Form builder email notifications now output multiple values correctly (Sævar Öfjörð Magnússon)
  * Fix: Closing 'more' dropdown on explorer no longer jumps to the top of the page (Ducky)
  * Fix: Users with only publish permission are no longer given implicit permission to delete pages (Matt Westcott)
+ * Fix: `search_garbage_collect` management command now works when wagtailsearchpromotions is not installed (Morgan Aubert)
 
 
 1.7 (20.10.2016)
